--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,8 +17,12 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.SportIn">
-        <activity android:name=".PhoneVerificationActivity"/>
-        <activity android:name=".MainActivity"
+        <activity
+            android:name=".BuildProfileActivity"
+            android:exported="false" />
+        <activity android:name=".PhoneVerificationActivity" />
+        <activity
+            android:name=".MainActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
